@@ -1,3 +1,8 @@
+2006-12-17  Behdad Esfahbod  <behdad@gnome.org>
+
+	* glib/gstring.c: Improve docs about string functions taking a
+	length.  (#378727)
+
 2006-12-17  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Use AC_LANG_SOURCE for the clock test.
